# rust-muxio

./: .gitignore  AGENTS.md  Cargo.toml  DRAFT.md  README.md  release.toml
.cargo/: deny.toml
.github/workflows/: rust-lint.yml  rust-tests.yml
.opencode/plans/: 1782609559287-happy-harbor.md  1782832750867-happy-pixel.md  1782842287961-mighty-wizard.md  1782845326927-playful-squid.md  1782849738403-silent-moon.md  TODO-FUTURE-PER-STREAM-BUDGET.md  TODO-README-CONSIDERATIONS.md  TODOs.md  bounded-channels-for-rpc-transport.md
benches/: README.md
core/: Cargo.toml  README.md
core/src/: constants.rs  lib.rs  utils.rs
core/src/rpc/: rpc_dispatcher.rs  rpc_internals.rs
core/src/rpc/rpc_internals/: README.md  rpc_respondable_session.rs  rpc_session.rs  rpc_trait.rs
core/src/utils/: increment_u32_id.rs
docs/: README_TEMPLATE.md
example-muxio-rpc-service-definition/: Cargo.toml
example-muxio-rpc-service-definition/src/: lib.rs  prebuffered.rs
example-muxio-rpc-service-definition/src/prebuffered/: add.rs  echo.rs  mult.rs
example-muxio-service-definition/: Cargo.toml
example-muxio-service-definition/src/: prebuffered.rs
example-muxio-ws-rpc-app/: Cargo.toml  README.md
example-muxio-ws-rpc-app/benches/: roundtrip.rs
example-muxio-ws-rpc-app/src/: client.rs  lib.rs  main.rs  rpc_transport.rs  service_definition.rs
example-muxio-ws-rpc-app/src/service_definition/: add.rs  mult.rs
example-muxio-ws-rpc-app/src/service_definition/prebuffered/: add.rs
examples/example-muxio-rpc-service-definition/: Cargo.toml  README.md
examples/example-muxio-rpc-service-definition/src/prebuffered/: add.rs  echo.rs  mult.rs
examples/example-muxio-ws-rpc-app/: Cargo.toml
examples/example-muxio-ws-rpc-app/benches/: roundtrip.rs
examples/example-muxio-ws-rpc-app/src/: lib.rs  main.rs
extensions/: README.md
extensions/muxio-ext-test/: Cargo.toml  README.md  build.rs
extensions/muxio-ext-test/src/: endpoint_helpers.rs  ipc_helpers.rs  lib.rs  test_assertions.rs  test_suites.rs  test_transport.rs  wasm_helpers.rs  ws_helpers.rs
extensions/muxio-ext-test/src/transports/: ipc.rs  mod.rs  wasm.rs  ws.rs
extensions/muxio-ext-test/tests/: complex_concurrent_tests.rs  mpsc_adapter_tests.rs  prebuffered_roundtrip_tests.rs  prebuffered_server_to_client_tests.rs  registration_conflict_tests.rs  streaming_handler_tests.rs  transport_state_tests.rs
extensions/muxio-ext-test/tests/muxio-tokio-rpc-server/: proxy_error_propagation_tests.rs
extensions/muxio-mpsc-adapter/: Cargo.toml
extensions/muxio-mpsc-adapter/src/: client.rs  server.rs
extensions/muxio-rpc-endpoint/: Cargo.toml
extensions/muxio-rpc-service/: Cargo.toml  README.md
extensions/muxio-rpc-service-caller/: Cargo.toml  README.md
extensions/muxio-rpc-service-caller/src/: caller.rs  caller_interface.rs  dynamic_channel.rs  error.rs  lib.rs  transport_state.rs  with_dispatcher_trait.rs  write_channel.rs
extensions/muxio-rpc-service-caller/src/prebuffered/: traits.rs
extensions/muxio-rpc-service-caller/tests/: dynamic_channel_tests.rs  prebuffered_caller_tests.rs
extensions/muxio-rpc-service-endpoint/: Cargo.toml  README.md
extensions/muxio-rpc-service-endpoint/src/: client_read_channel.rs  endpoint.rs  endpoint_interface.rs  endpoint_utils.rs  error.rs  lib.rs  with_handlers_trait.rs
extensions/muxio-rpc-service-endpoint/tests/: prebuffered_endpoint_tests.rs
extensions/muxio-rpc-service/src/: client_interface.rs  constants.rs  error.rs  lib.rs  macros.rs  prebuffered.rs  result_status.rs  server_interface.rs
extensions/muxio-rpc-service/src/prebuffered/: call_prebuffered_rpc.rs  prebuffered_traits.rs
extensions/muxio-service-traits/: Cargo.toml
extensions/muxio-tokio-ipc-client/: Cargo.toml  README.md
extensions/muxio-tokio-ipc-client/src/: ipc_client.rs  lib.rs
extensions/muxio-tokio-ipc-client/tests/: rpc_roundtrip_tests.rs  transport_state_tests.rs
extensions/muxio-tokio-ipc-server/: Cargo.toml  README.md
extensions/muxio-tokio-mpsc-adapter/: Cargo.toml  README.md
extensions/muxio-tokio-mpsc-adapter/src/: client.rs  lib.rs  server.rs
extensions/muxio-tokio-rpc-client/: Cargo.toml  README.md
extensions/muxio-tokio-rpc-client/src/: lib.rs  rpc_client.rs
extensions/muxio-tokio-rpc-client/tests/: ping_tests.rs  prebuffered_integration_server_to_client_tests.rs  prebuffered_integration_tests.rs  prebuffered_tests.rs  transport_state_tests.rs
extensions/muxio-tokio-rpc-ipc-client/: Cargo.toml  README.md
extensions/muxio-tokio-rpc-ipc-client/src/: lib.rs  rpc_ipc_client.rs
extensions/muxio-tokio-rpc-ipc-server/: Cargo.toml  README.md
extensions/muxio-tokio-rpc-server/: Cargo.toml  README.md
extensions/muxio-tokio-rpc-server/src/: lib.rs  rpc_server.rs  utils.rs
extensions/muxio-tokio-rpc-server/src/utils/: bind_tcp_listener_on_random_port.rs  tcp_listener_to_host_port.rs
extensions/muxio-tokio-rpc-server/tests/: README.md  proxy_error_propagation_tests.rs
extensions/muxio-wasm-rpc-client/: Cargo.toml  README.md
extensions/muxio-wasm-rpc-client/src/: client.rs  lib.rs  old.client_dispatcher.rs  old.socket_transport.rs  old_call_muxio.rs  old_client_dispatcher.rs  rpc_wasm_client.rs  socket_transport.rs  static_client.rs  static_lib.rs
extensions/muxio-wasm-rpc-client/src/static_lib/: README.md  static_client.rs  static_socket_bridge.rs  static_transport_bridge.rs
extensions/muxio-wasm-rpc-client/tests/: prebuffered_integration_server_to_client_tests.rs  prebuffered_integration_tests.rs  transport_state_tests.rs  transport_state_tests.rs--TODO
muxio-ws-rpc-demo/: Cargo.toml
muxio-ws-rpc-demo-app/: Cargo.toml
muxio-ws-rpc-demo-app/benches/: roundtrip.rs
src/: constants.rs  frame.rs  lib.rs  rpc.rs  utils.rs
src/rpc/: README.md  (+17 more)
tests/: frame_stream_tests.rs  rpc_client_tests.rs  rpc_dispatcher_prefbuffered_tests.rs  rpc_dispatcher_tests.rs  rpc_dispatcher_tests.rs.TODO  rpc_dispatcher_tests_proto_tests.rs  rpc_node_tests.rs  rpc_respondable_session_tests.rs  rpc_session_node_tests.rs  rpc_stream_tests.rs  stream_termination_tests.rs  utils_tests.rs
(+43 files in other folders)
