[workspace.package]
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
version = "0.4.0-alpha"
edition = "2024"
repository = "https://github.com/jzombie/rust-muxio"
license = "Apache-2.0"
publish = true

[package]
name = "muxio"
description = "Toolkit for layered stream multiplexing and schemaless RPC communication."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true  # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[workspace]
members = [
    ".",
    "example-muxio-ws-rpc-app",
    "extensions/muxio-tokio-rpc-client",
    "extensions/muxio-wasm-rpc-client",
    "extensions/muxio-tokio-rpc-server",
    "extensions/muxio-rpc-service",
    "extensions/muxio-rpc-service-caller",
    "extensions/muxio-rpc-service-endpoint",
    "example-muxio-rpc-service-definition",
]
resolver = "2"

[dependencies]
chrono = "0.4.41"
once_cell = "1.21.3"
tracing = "0.1.41"

[workspace.dependencies]
# Intra-workspace crates
muxio = { path = ".", version = "0.4.0-alpha" }
muxio-rpc-service = { path = "extensions/muxio-rpc-service", version = "0.4.0-alpha" }
muxio-rpc-service-caller = { path = "extensions/muxio-rpc-service-caller", version = "0.4.0-alpha" }
muxio-rpc-service-endpoint = { path = "extensions/muxio-rpc-service-endpoint", version = "0.4.0-alpha" }
muxio-tokio-rpc-client = { path = "extensions/muxio-tokio-rpc-client", version = "0.4.0-alpha" }
muxio-tokio-rpc-server = { path = "extensions/muxio-tokio-rpc-server", version = "0.4.0-alpha" }
muxio-wasm-rpc-client = { path = "extensions/muxio-wasm-rpc-client", version = "0.4.0-alpha" }
example-muxio-rpc-service-definition = { path = "example-muxio-rpc-service-definition", version = "0.4.0-alpha" }

[dev-dependencies]
bitcode = "0.6.6"
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["full"] }
