[workspace.package]
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
version = "0.10.0-alpha"
edition = "2024"
repository = "https://github.com/jzombie/rust-muxio"
license = "Apache-2.0"
publish = true

[package]
name = "muxio"
description = "Toolkit for layered stream multiplexing and schemaless RPC communication."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true  # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[workspace]
members = [
    ".",
    "extensions/muxio-ext-test",
    "extensions/muxio-rpc-service",
    "extensions/muxio-rpc-service-caller",
    "extensions/muxio-rpc-service-endpoint",
    "extensions/muxio-tokio-rpc-server",
    "extensions/muxio-tokio-rpc-client",
    "extensions/muxio-wasm-rpc-client",
    "examples/example-muxio-ws-rpc-app",
    "examples/example-muxio-rpc-service-definition",
]
resolver = "2"

[dependencies]
chrono = "0.4.41"
once_cell = "1.21.3"
tracing = "0.1.41"

[workspace.dependencies]
# Intra-workspace crates
muxio = { path = ".", version = "0.10.0-alpha" }
example-muxio-rpc-service-definition = { path = "examples/example-muxio-rpc-service-definition", version = "0.10.0-alpha" }
muxio-rpc-service = { path = "extensions/muxio-rpc-service", version = "0.10.0-alpha" }
muxio-rpc-service-caller = { path = "extensions/muxio-rpc-service-caller", version = "0.10.0-alpha" }
muxio-rpc-service-endpoint = { path = "extensions/muxio-rpc-service-endpoint", version = "0.10.0-alpha" }
muxio-tokio-rpc-server = { path = "extensions/muxio-tokio-rpc-server", version = "0.10.0-alpha" }
muxio-tokio-rpc-client = { path = "extensions/muxio-tokio-rpc-client", version = "0.10.0-alpha" }

# Third-party crates
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["ws"] }
bitcode = "0.6.6"
bytemuck = "1.23.1"
criterion = { version = "0.6.0" }
doc-comment = "0.3.3"
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
num_enum = "0.7.3"
tokio = { version = "1.45.1" }
tokio-tungstenite = "0.28.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }

# Muxio-core dev dedepencies
[dev-dependencies]
bitcode = { workspace = true } # Specifially used as dev in some crates
rand = "0.9.1"
tokio = { workspace = true, features = ["full"] } # Specifially used as dev in some crates
