
[package]
name = "muxio"
description = "Toolkit for layered stream multiplexing and schemaless RPC communication."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true  # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[workspace]
members = [
    ".",
    "core",
    "examples/example-muxio-rpc-service-definition",
    "examples/example-muxio-ws-rpc-app",
    "extensions/muxio-ext-test",
    "extensions/muxio-rpc-service",
    "extensions/muxio-rpc-service-caller",
    "extensions/muxio-rpc-service-endpoint",
    "extensions/muxio-tokio-rpc-ipc-client",
    "extensions/muxio-tokio-rpc-ipc-server",
    "extensions/muxio-tokio-rpc-client",
    "extensions/muxio-tokio-rpc-server",
    "extensions/muxio-wasm-rpc-client",
]
resolver = "2"
[workspace.package]
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
version = "0.11.1-alpha"
edition = "2024"
repository = "https://github.com/jzombie/rust-muxio"
license = "Apache-2.0"
publish = true

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws"] }
bitcode = "0.6.9"
bytemuck = "1.25.0"
bytes = "1.11.1"
chrono = "0.4.44"
criterion = { version = "0.8.2" }
doc-comment = "0.3.4"
example-muxio-rpc-service-definition = { path = "examples/example-muxio-rpc-service-definition", version = "0.11.1-alpha" }
futures = "0.3.32"
futures-util = "0.3.32"
interprocess = { version = "2.4.2", features = ["tokio"] }
muxio = { path = ".", version = "0.11.1-alpha" }
muxio-core = { path = "core", version = "0.11.1-alpha" }
muxio-rpc-service = { path = "extensions/muxio-rpc-service", version = "0.11.1-alpha" }
muxio-rpc-service-caller = { path = "extensions/muxio-rpc-service-caller", version = "0.11.1-alpha" }
muxio-rpc-service-endpoint = { path = "extensions/muxio-rpc-service-endpoint", version = "0.11.1-alpha" }
muxio-tokio-rpc-ipc-client = { path = "extensions/muxio-tokio-rpc-ipc-client", version = "0.11.1-alpha" }
muxio-tokio-rpc-ipc-server = { path = "extensions/muxio-tokio-rpc-ipc-server", version = "0.11.1-alpha" }
muxio-tokio-rpc-client = { path = "extensions/muxio-tokio-rpc-client", version = "0.11.1-alpha" }
muxio-tokio-rpc-server = { path = "extensions/muxio-tokio-rpc-server", version = "0.11.1-alpha" }
muxio-wasm-rpc-client = { path = "extensions/muxio-wasm-rpc-client", version = "0.11.1-alpha" }
num_enum = "0.7.6"
once_cell = "1.21.4"
rand = "0.10.1"
tokio = { version = "1.52.3" }
tokio-tungstenite = "0.29.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }

[features]
default = []
rpc-service = ["dep:muxio-rpc-service"]
rpc-service-caller = ["dep:muxio-rpc-service-caller"]
rpc-service-endpoint = ["dep:muxio-rpc-service-endpoint"]
tokio-rpc-ipc-client = ["dep:muxio-tokio-rpc-ipc-client"]
tokio-rpc-ipc-server = ["dep:muxio-tokio-rpc-ipc-server"]
tokio-rpc-client = ["dep:muxio-tokio-rpc-client"]
tokio-rpc-server = ["dep:muxio-tokio-rpc-server"]
wasm-rpc-client = ["dep:muxio-wasm-rpc-client"]
full = [
    "rpc-service",
    "rpc-service-caller",
    "rpc-service-endpoint",
    "tokio-rpc-ipc-client",
    "tokio-rpc-ipc-server",
    "tokio-rpc-client",
    "tokio-rpc-server",
    "wasm-rpc-client",
]

[dependencies]
muxio-core = { workspace = true }

# Optional extension re-exports (behind feature flags)
muxio-rpc-service = { workspace = true, optional = true }
muxio-rpc-service-caller = { workspace = true, optional = true }
muxio-rpc-service-endpoint = { workspace = true, optional = true }
muxio-tokio-rpc-ipc-client = { workspace = true, optional = true }
muxio-tokio-rpc-ipc-server = { workspace = true, optional = true }
muxio-tokio-rpc-client = { workspace = true, optional = true }
muxio-tokio-rpc-server = { workspace = true, optional = true }
muxio-wasm-rpc-client = { workspace = true, optional = true }

[dev-dependencies]
bitcode = { workspace = true }
example-muxio-rpc-service-definition = { workspace = true }
futures = { workspace = true }
muxio-rpc-service-caller = { workspace = true }
muxio-tokio-rpc-ipc-client = { workspace = true }
muxio-tokio-rpc-ipc-server = { workspace = true }
muxio-tokio-rpc-client = { workspace = true }
muxio-tokio-rpc-server = { workspace = true }
rand.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
