[package]
name = "example-muxio-ws-rpc-app"
edition.workspace = true
version.workspace = true 
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
muxio = { path = "../" }
async-trait = "0.1.88"
muxio-tokio-rpc-server = { path = "../extensions/muxio-tokio-rpc-server" }
muxio-tokio-rpc-client = { path = "../extensions/muxio-tokio-rpc-client" }
muxio-rpc-service = { path = "../extensions/muxio-rpc-service" }
muxio-rpc-service-caller = { path = "../extensions/muxio-rpc-service-caller", features=["tokio_support"] }
example-muxio-rpc-service-definition = { path = "../example-muxio-rpc-service-definition" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bench]]
name = "roundtrip"
harness = false

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async_tokio"] }
doc-comment = "0.3.3"
futures = "0.3.31"
