[package]
name = "example-muxio-ws-rpc-app"
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish = false # Explcitly false

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
muxio = { path = "../" }
async-trait = "0.1.88"
muxio-tokio-rpc-server = { workspace = true }
muxio-tokio-rpc-client = { workspace = true }
muxio-rpc-service-caller = { workspace = true, features=["tokio_support"] }
example-muxio-rpc-service-definition = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bench]]
name = "roundtrip"
harness = false

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async_tokio"] }
doc-comment = "0.3.3"
futures = "0.3.31"
