[package]
name = "example-muxio-rpc-service-definition"
description = "Example service definitions for Muxio RPC servicing."
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
bitcode = "0.6.6"
muxio-rpc-service = { workspace = true }
