[package]
name = "example-muxio-ws-rpc-app"
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish = false # Explcitly false

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
muxio = { workspace = true }
muxio-tokio-rpc-server = { workspace = true }
muxio-tokio-rpc-client = { workspace = true }
muxio-rpc-service-caller = { workspace = true }
example-muxio-rpc-service-definition = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bench]]
name = "roundtrip"
harness = false

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
doc-comment = { workspace = true }
futures = { workspace = true }
