[package]
name = "example-muxio-ws-rpc-app"
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish = false # Explcitly false

[dependencies]
async-trait = { workspace = true }
example-muxio-rpc-service-definition = { workspace = true }
muxio-core = { workspace = true }
muxio-rpc-service-caller = { workspace = true }
muxio-tokio-rpc-client = { workspace = true }
muxio-tokio-rpc-server = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
doc-comment = { workspace = true }
futures = { workspace = true }
muxio-tokio-ipc-client = { workspace = true }
muxio-tokio-ipc-server = { workspace = true }

[[bench]]
name = "roundtrip"
harness = false
