[package]
name = "muxio-ext-test"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait = { workspace = true }
bytemuck.workspace = true
example-muxio-rpc-service-definition.workspace = true
futures-util = { workspace = true }
interprocess = { workspace = true }
muxio-core = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-caller = { workspace = true }
muxio-rpc-service-endpoint = { workspace = true, features = ["tokio_support"] }
muxio-tokio-rpc-client = { workspace = true }
muxio-tokio-rpc-ipc-client = { workspace = true }
muxio-tokio-rpc-ipc-server = { workspace = true }
muxio-tokio-rpc-server = { workspace = true }
muxio-wasm-rpc-client = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
