[package]
name = "muxio-rpc-service-caller"
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
muxio = { workspace = true }
muxio-rpc-service = { workspace = true }

# Optional dependencies
tokio = { version = "1.45.1", features = ["sync"], optional = true }

[features]
default = []
tokio_support = ["dep:tokio"]

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
example-muxio-rpc-service-definition = { workspace = true }
