[package]
name = "muxio-rpc-service-caller"
description = "Generic, runtime-agnostic interface and logic for building Muxio RPC clients."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
async-trait = "0.1.89"
futures = "0.3.32"
muxio.workspace = true
muxio-rpc-service.workspace = true
tokio = { version = "1.52.3", features = ["rt", "sync", "io-util"] }
tracing.workspace = true

[dev-dependencies]
example-muxio-rpc-service-definition = { workspace = true }
tokio = { version = "1.52.3", features = ["full"] }
