[package]
name = "muxio-rpc-service-endpoint"
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
muxio = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-caller = { workspace = true }

# Optional dependencies
tokio = { version = "1.45.1", features = ["sync"], optional = true }
tracing = "0.1.41"

[features]
default = []
tokio_support = [
    "dep:tokio", # Enables the optional tokio dependency in THIS crate.
    "muxio-rpc-service-caller/tokio_support" # Enables the feature in the CALLER crate.
]

[dev-dependencies]
# doc-comment = "0.3.3" # TODO: Re-enable
tokio = { version = "1.45.1", features = ["full"] }
