[package]
name = "muxio-rpc-service-endpoint"
description = "Generic, runtime-agnostic interface and logic for building Muxio RPC server endpoints."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
async-trait = { workspace = true }
bitcode = { workspace = true }
futures = { workspace = true }
muxio = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-caller = { workspace = true }
tracing = { workspace = true }

# Optional dependencies
tokio = { workspace = true, features = ["sync"], optional = true }

[features]
default = []
tokio_support = [
    "dep:tokio", # Enables the optional tokio dependency in THIS crate.
]

[dev-dependencies]
# doc-comment = { workspace = true } # TODO: Re-enable
tokio = { workspace = true, features = ["full"] }
example-muxio-rpc-service-definition = { workspace = true }
