[package]
name = "muxio-rpc-service-endpoint"
description = "Generic, runtime-agnostic interface and logic for building Muxio RPC server endpoints."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[features]
default = []
tokio_support = ["dep:tokio"]

[dependencies]
async-trait = { workspace = true }
bitcode = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
muxio = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-caller = { workspace = true }

# Optional dependencies
tokio = { workspace = true, features = ["rt", "sync"], optional = true }
tracing = { workspace = true }

[dev-dependencies]
example-muxio-rpc-service-definition = { workspace = true }
# doc-comment = { workspace = true } # TODO: Re-enable
tokio = { workspace = true, features = ["full"] }
