[package]
name = "muxio-rpc-service"
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
muxio = { workspace = true }
num_enum = "0.7.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }
