[package]
name = "muxio-rpc-service"
description = "Core traits, types, and compile-time method ID generation for Muxio."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
async-trait = { workspace = true }
bitcode = { workspace = true }
futures = { workspace = true }
muxio = { workspace = true }
num_enum = { workspace = true }
xxhash-rust = { workspace = true }
