[package]
name = "muxio-tokio-mpsc-adapter"
description = "A Tokio mpsc channel adapter wrapping Muxio's streaming RPC API with simple Sender/Receiver pairs."
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
muxio-core = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-caller = { workspace = true }
muxio-rpc-service-endpoint = { workspace = true, features = ["tokio_support"] }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }
