[package]
name = "muxio-tokio-rpc-client"
description = "A Tokio-based Muxio WebSocket RPC client implementation."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
futures-util = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
muxio = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-caller = { workspace = true, features=["tokio_support"] }
futures = "0.3.31"
tracing = "0.1.41"

[dev-dependencies]
muxio-tokio-rpc-server = { workspace = true }
example-muxio-rpc-service-definition = { workspace = true }
axum = "0.8.4"
