[package]
name = "muxio-tokio-rpc-client"
description = "A Tokio-based Muxio WebSocket RPC client implementation."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
muxio = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-caller = { workspace = true }
muxio-rpc-service-endpoint = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
example-muxio-rpc-service-definition = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
muxio-tokio-rpc-server = { workspace = true }
