[package]
name = "muxio-tokio-rpc-server"
description = "A Tokio-based Muxio WebSocket RPC server implementation."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
bytes = "1.10.1"
futures-util = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
muxio = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-endpoint = { workspace = true, features=["tokio_support"] }
async-trait = "0.1.88"
tracing = "0.1.41"
