[package]
name = "muxio-tokio-rpc-server"
description = "A Tokio-based Muxio WebSocket RPC server implementation."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
muxio = { workspace = true }
muxio-rpc-service-caller = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-endpoint = { workspace = true, features=["tokio_support"] }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bytemuck.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
muxio-tokio-rpc-client = { workspace = true }
example-muxio-rpc-service-definition.workspace = true
