[package]
name = "muxio-wasm-rpc-client"
description = "A WASM-based Muxio RPC client implementation."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
muxio = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-caller = { workspace = true }
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
muxio-tokio-rpc-server = { workspace = true }
muxio-rpc-service-endpoint = { workspace = true }
example-muxio-rpc-service-definition = { workspace = true }
futures-util = "0.3.31"
tokio-tungstenite = "0.27.0"
