[package]
name = "muxio-wasm-rpc-client"
description = "A WASM-based Muxio RPC client implementation."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
muxio = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-caller = { workspace = true }
muxio-rpc-service-endpoint = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[package.metadata]
# dev-dependencies intentionally removed — integration tests were moved to a non-publishable harness.

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
muxio-tokio-rpc-server = { workspace = true }
example-muxio-rpc-service-definition = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
