[package]
name = "muxio-wasm-rpc-client"
description = "A WASM-based Muxio RPC client implementation."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
js-sys = "0.3.91"
muxio-core = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-caller = { workspace = true }
muxio-rpc-service-endpoint = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"

[dev-dependencies]
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
